--- a/themes/unitexgramlab/sass/layout/_about.scss
+++ b/themes/unitexgramlab/sass/layout/_about.scss
@@ -21,12 +21,23 @@
     }
 
     #corpus-processing-suite {
-        padding-top: 0em;
+      padding-top: 0em;
 
-        ul.actions.piped li {
-          padding: 0;
+      ul.actions.piped {
+       li {
+          padding: 2px;
           line-height: 2em;
+          @include breakpoint(small) {
+            display: block;
+            text-align: center;
+            width: 100%;
+            > * {
+              width: 100%;
+              margin: 0 !important;
+            }
+          }
         }
+      }
     }
 
     .ug-label, .ug-badge {
